--- a/src/main/resources/application-sample.yml
+++ b/src/main/resources/application-sample.yml
@@ -16,7 +16,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: hello@gmail.com
-    password: abcdabcdabcdabcd
+    password:
     properties:
       mail:
         smtp:
@@ -27,9 +27,3 @@ s3:
   diner-max-image-count: 10
 
 bypass-email-domain-check-for-dev: true # If true, you can receive email with gmail.com, naver.com, ...
-
-mybatis:
-  mapper-locations: mybatis/**/*.xml
-  configuration:
-    map-underscore-to-camel-case: true
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
