--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,12 +7,12 @@ phases:
   pre_build:
     commands:
       - echo Fetching application.yml from S3...
-      - aws s3 cp s3://our-company-lunch-deploy/application-dev.yml src/main/resources/application-dev.yml
+      - aws s3 cp s3://our-company-lunch-deploy/application-ec2.yml src/main/resources/application-ec2.yml
   build:
     commands:
       - echo "Build start on `date`"
       - chmod u+x gradlew
-      - ./gradlew clean build
+      - ./gradlew clean build -Dspring.profiles.active=ec2
   post_build:
     commands:
       - echo "Build completed on `date`"
