--- a/src/main/resources/application-sample.yml
+++ b/src/main/resources/application-sample.yml
@@ -9,6 +9,9 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        default_batch_fetch_size: 100
   jwt:
     secret:
     expired-in-hour: 24
