--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ out/
 ### Config ###
 src/main/resources/application-dev.yml
 src/main/resources/application-ec2.yml
+src/main/resources/our-company-lunch-firebase-adminsdk-*
