--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.12.5'
     implementation 'org.hibernate.orm:hibernate-spatial'
+    implementation 'com.google.firebase:firebase-admin:9.2.0'
 
     // Querydsl 관련
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
