--- a/src/main/resources/application-sample.yml
+++ b/src/main/resources/application-sample.yml
@@ -40,3 +40,8 @@ bypass-email-domain-check-for-dev: true # If true, you can receive email with gm
 scheduler:
   clear-verification-code:
     cron: "0 0 3 * * *" # Run every day 03:00 AM
+
+springdoc:
+  swagger-ui:
+    operations-sorter: method
+    tags-sorter: alpha
