--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ env:
   CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: our-company-lunch-e-group1
   APPLICATION_YML: ./src/main/resources/application.yml
   SPRING_PROFILE: ec2
+  FIREBASE_JSON: our-company-lunch-firebase-adminsdk.json
 
 jobs:
   build:
@@ -33,11 +34,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-2
 
-      - name: Download profile files from S3
+      - name: Download configuration files from S3
         run: |
-          aws s3 cp --region ap-northeast-2 s3://${{ secrets.S3_BUCKET_NAME }}/application-${{ env.SPRING_PROFILE }}.yml ./src/main/resources/ 
+          aws s3 cp --region ap-northeast-2 s3://${{ secrets.S3_BUCKET_NAME }}/application-${{ env.SPRING_PROFILE }}.yml ./src/main/resources/
+          aws s3 cp --region ap-northeast-2 s3://${{ secrets.S3_BUCKET_NAME }}/${{ FIREBASE_JSON }} .
       
-      - name: Setup profile
+      - name: Change spring profile to ${{ env.SPRING_PROFILE }}
         uses: microsoft/variable-substitution@v1
         with:
           files: ${{ env.APPLICATION_YML }}
@@ -52,7 +54,7 @@ jobs:
         run: ./gradlew build
         shell: bash
 
-      - name: Make zip file
+      - name: Archive to a zip file
         run: zip -r ./$GITHUB_SHA . -x "*.git*"
         shell: bash
 
@@ -62,7 +64,6 @@ jobs:
       - name: Run CodeDeploy
         run: |
           aws deploy create-deployment \
-          --deployment-config-name CodeDeployDefault.AllAtOnce \
           --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
           --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }} \
           --s3-location bucket=${{ secrets.S3_BUCKET_NAME }},bundleType=zip,key=$GITHUB_SHA.zip
