--- a/appspec.yml
+++ b/appspec.yml
@@ -11,6 +11,6 @@ permissions:
     group: ec2-user
 hooks:
   AfterInstall:
-    - location: startup.sh
+    - location: scripts/startup.sh
       timeout: 60
       runas: ec2-user
