chore: Change AWS credentials to OIDC in Github Actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,14 @@
-name: our-company-lunch-ec2
+name: Our Company Lunch Build & Deploy
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'README.md'
+      - '.github/**'
+      - 'doc/**'
 
 env:
   CODE_DEPLOY_APPLICATION_NAME: our-company-lunch-e
@@ -30,9 +35,9 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-2
+          role-to-assume: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
+          role-duration-seconds: 1800
 
       - name: Download configuration files from S3
         run: |
