--- a/nginx/ourcompanylunch.conf
+++ b/nginx/ourcompanylunch.conf
@@ -1,6 +1,14 @@
 server {
     listen 80;
     server_name api.ourcompanylunch.com;
+    return 301 https://api.ourcompanylunch.com$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name api.ourcompanylunch.com;
+    ssl_certificate /etc/letsencrypt/live/api.ourcompanylunch.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.ourcompanylunch.com/privkey.pem;
 
     location / {
         proxy_pass http://localhost:8080;
