--- a/.github/workflows/deploy-mac.yml
+++ b/.github/workflows/deploy-mac.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
+      - cicd
     paths-ignore:
       - 'README.md'
       - '.github/**'
