--- a/src/main/resources/application-sample.yml
+++ b/src/main/resources/application-sample.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mariadb://127.0.0.1:3306/companylunchcomment
+    url: jdbc:mariadb://127.0.0.1:3306/ourcompanylunch
     driver-class-name: org.mariadb.jdbc.Driver
     username:
     password:
