--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ out/
 .vscode/
 
 ### Config ###
-config/
+/config/
 src/main/resources/application-local.yml
 src/main/resources/application-ec2.yml
 src/main/resources/application-mac.yml
