--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.12.5'
     implementation 'org.hibernate.orm:hibernate-spatial'
     implementation 'com.google.firebase:firebase-admin:9.2.0'
+    implementation 'org.springframework.kafka:spring-kafka'
 
     // Querydsl 관련
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
