--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,7 @@
+networks:
+  kafka-net:
+    driver: bridge
+
 services:
   db:
     image: mariadb:10.11.8
@@ -8,3 +12,36 @@ services:
       MYSQL_PASSWORD: a1234
     ports:
       - "3306:3306"
+  zookeeper:
+    image: bitnami/zookeeper:3.9
+    networks:
+      - kafka-net
+    ports:
+      - "2181:2181"
+    volumes:
+      - zookeeper-data:/bitnami
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+  kafka:
+    image: 'bitnami/kafka:3.1.2'
+    networks:
+      - kafka-net
+    environment:
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://0.0.0.0:9092,EXTERNAL://0.0.0.0:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9093
+    depends_on:
+      - zookeeper
+    ports:
+      - '9092:9092'
+      - '9093:9093'
+    volumes:
+      - kafka-data:/bitnami/kafka
+
+volumes:
+  kafka-data:
+    driver: local
+  zookeeper-data:
+    driver: local
