--- a/nginx/ourcompanylunchmetrics.conf
+++ b/nginx/ourcompanylunchmetrics.conf
@@ -18,3 +18,24 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
+
+server {
+    listen 80;
+    server_name prometheus.ourcompanylunch.com;
+    return 301 https://prometheus.ourcompanylunch.com$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name prometheus.ourcompanylunch.com;
+    ssl_certificate /etc/letsencrypt/live/ourcompanylunch.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ourcompanylunch.com/privkey.pem;
+
+    location / {
+        proxy_pass http://localhost:9090;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
